--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <version>1.7.24</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
 
     </dependencies>
 
